load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "config",
    srcs = [
        "config.go",
        "flags.go",
        "keys.go",
        "viper.go",
    ],
    importpath = "github.com/ava-labs/avalanchego/config",
    visibility = ["//visibility:public"],
    deps = [
        "//api/server",
        "//chains",
        "//config/node",
        "//database/leveldb",
        "//database/memdb",
        "//database/pebbledb",
        "//genesis",
        "//ids",
        "//network",
        "//network/dialer",
        "//network/throttling",
        "//snow/consensus/snowball",
        "//snow/networking/benchlist",
        "//snow/networking/router",
        "//snow/networking/tracker",
        "//staking",
        "//subnets",
        "//trace",
        "//upgrade",
        "//utils/bag",
        "//utils/compression",
        "//utils/constants",
        "//utils/dynamicip",
        "//utils/ips",
        "//utils/logging",
        "//utils/perms",
        "//utils/profiler",
        "//utils/set",
        "//utils/storage",
        "//utils/timer",
        "//utils/ulimit",
        "//utils/units",
        "//version",
        "//vms/components/gas",
        "//vms/platformvm/reward",
        "//vms/platformvm/validators/fee",
        "//vms/proposervm",
        "@com_github_spf13_pflag//:pflag",
        "@com_github_spf13_viper//:viper",
    ],
)

go_test(
    name = "config_test",
    srcs = ["config_test.go"],
    embed = [":config"],
    deps = [
        "//chains",
        "//config/node",
        "//ids",
        "//snow/consensus/snowball",
        "//subnets",
        "//utils/constants",
        "@com_github_spf13_pflag//:pflag",
        "@com_github_spf13_viper//:viper",
        "@com_github_stretchr_testify//require",
    ],
)
