[package]
name = "firewood-connection"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.1", features = ["rt-multi-thread", "sync", "macros"] }
crossbeam-channel = "0.5.7"
firewood = { version = "0.0.1", path = "../firewood" }
log = "0.4.17"
env_logger = "0.10.0"

[dev-dependencies]
serial_test = "1.0.0"
