[package]
name = "firewood-macros"
version = "0.0.7"
edition = "2024"
rust-version = "1.85"
authors = [
     "Ron Kuris <ron.kuris@avalabs.org>",
]
description = "Proc macros for Firewood metrics"
license-file = "../LICENSE.md"
homepage = "https://avalabs.org"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }

[dev-dependencies]
trybuild = "1.0"
metrics = "0.24"
coarsetime = "0.1"

[lints]
workspace = true 
