[package]
name = "firewood-macros"
version.workspace = true
edition.workspace = true
authors = [
     "Ron Kuris <ron.kuris@avalabs.org>",
]
description = "Proc macros for Firewood metrics"
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }

[dev-dependencies]
trybuild = "1.0"
metrics = "0.24"
coarsetime = "0.1"

[lints]
workspace = true
