[package]
name = "firewood-shale"
version = "0.0.1"
edition = "2021"
description = "Useful abstraction and light-weight implemenation for a key-value store."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
lru = "0.10.0"

[dev-dependencies]
bencher = "0.1.5"
rand = "0.8.5"

[[bench]]
name = "shale-bench"
harness = false
