[package]
name = "firewood"
version = "0.6.0"
edition.workspace = true
authors = [
     "Angel Leon <gubatron@gmail.com>",
     "Austin Larson <78000745+alarso16@users.noreply.github.com>",
     "Cesar <137245636+nytzuga@users.noreply.github.com>",
     "Dan Laine <daniel.laine@avalabs.org>",
     "Dan Sover <dan.sover@avalabs.org>",
     "Hao Hao <hao.hao@avalabs.org>",
     "Patrick O'Grady <prohb125@gmail.com>",
     "Richard Pringle <rpring9@gmail.com>",
     "Ron Kuris <ron.kuris@avalabs.org>",
     "Sam Batschelet <sam.batschelet@avalabs.org>",
     "xinifinity <113067541+xinifinity@users.noreply.github.com>",
]
description = "Firewood is an embedded key-value store, optimized to store blockchain state."
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true

[dependencies]
# Workspace dependencies
aquamarine.workspace = true
bytemuck_derive.workspace = true
bytemuck.workspace = true
fastrace.workspace = true
firewood-macros.workspace = true
firewood-metrics.workspace = true
firewood-storage.workspace = true
hex.workspace = true
integer-encoding.workspace = true
thiserror.workspace = true
# Regular dependencies
typed-builder = "0.23.2"
rayon = "1.12.0"
parking_lot.workspace = true
lender = "0.6.2"
nonzero_ext = "0.3.0"
sha3 = "0.10.9"
smallvec.workspace = true

[features]
default = []
nightly = []
io-uring = ["firewood-storage/io-uring"]
logger = ["firewood-storage/logger"]
ethhash = ["firewood-storage/ethhash"]
# Exposes internal types (e.g. `Merkle`) for use by benchmarks, integration
# tests, and the FFI. Not part of the public API; do not use in production code.
test_utils = ["firewood-storage/test_utils"]

[dev-dependencies]
# Workspace dependencies
clap = { workspace = true, features = ['derive'] }
criterion.workspace = true
env_logger.workspace = true
ethereum-types.workspace = true
firewood-storage = { workspace = true, features = ["test_utils"] }
firewood-triehash.workspace = true
pprof = { workspace = true, features = ["flamegraph"] }
rand.workspace = true
tempfile.workspace = true
test-case.workspace = true
# Regular dependencies
ctor = "0.6.3"
hash-db = "0.16.0"
plain_hasher = "0.2.3"
rlp = "0.6.1"
sha3 = "0.10.9"

[[bench]]
name = "hashops"
harness = false
required-features = ["test_utils"]

[[bench]]
name = "defer_persist"
harness = false
required-features = ["test_utils"]

[[bench]]
name = "proposal_reconstruct"
harness = false

[lints]
workspace = true
