[package]
name = "firewood-fwdctl"
version.workspace = true
edition.workspace = true
authors = [
     "Dan Laine <daniel.laine@avalabs.org>",
     "Dan Sover <dan.sover@avalabs.org>",
     "Hao Hao <hao.hao@avalabs.org>",
     "Richard Pringle <rpring9@gmail.com>",
     "Ron Kuris <ron.kuris@avalabs.org>",
     "Sam Batschelet <sam.batschelet@avalabs.org>",
     "xinifinity <113067541+xinifinity@users.noreply.github.com>",
     "zdf <orientzh1230@gmail.com>",
]
description = "Command-line tool for Firewood, an embedded key-value store optimized for blockchain state."
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "fwdctl"
path = "src/main.rs"

[dependencies]
firewood.workspace = true
firewood-storage.workspace = true
clap = { workspace = true, features = ["cargo"] }
env_logger = { workspace = true }
log = "0.4.27"
tokio = { workspace = true, features = ["full"] }
futures-util = "0.3.31"
hex = "0.4.3"
csv = "1.3.1"
nonzero_ext = "0.3.0"

[dev-dependencies]
anyhow = "1.0.98"
assert_cmd = "2.0.17"
predicates = "3.1.3"
serial_test = "3.2.0"
rand = { workspace = true }

[lints]
workspace = true
