[package]
name = "firewood-fwdctl"
version.workspace = true
edition.workspace = true
authors = [
     "Dan Laine <daniel.laine@avalabs.org>",
     "Dan Sover <dan.sover@avalabs.org>",
     "Hao Hao <hao.hao@avalabs.org>",
     "Richard Pringle <rpring9@gmail.com>",
     "Ron Kuris <ron.kuris@avalabs.org>",
     "Sam Batschelet <sam.batschelet@avalabs.org>",
     "xinifinity <113067541+xinifinity@users.noreply.github.com>",
     "zdf <orientzh1230@gmail.com>",
]
description = "Command-line tool for Firewood, an embedded key-value store optimized for blockchain state."
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "fwdctl"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
clap = { workspace = true, features = ["cargo"] }
env_logger.workspace = true
firewood.workspace = true
firewood-storage.workspace = true
hex.workspace = true
log.workspace = true
nonzero_ext.workspace = true
tokio = { workspace = true, features = ["full"] }
# Regular dependencies
csv = "1.3.1"
futures-util = "0.3.31"
indicatif = "0.18.0"

[features]
ethhash = ["firewood/ethhash"]
logger = ["firewood/logger"]

[dev-dependencies]
# Workspace dependencies
rand.workspace = true
# Regular dependencies
anyhow = "1.0.98"
assert_cmd = "2.0.17"
predicates = "3.1.3"
serial_test = "3.2.0"

[lints]
workspace = true
