load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "genesis",
    srcs = [
        "aliases.go",
        "bootstrappers.go",
        "checkpoints.go",
        "config.go",
        "genesis.go",
        "genesis_fuji.go",
        "genesis_local.go",
        "genesis_mainnet.go",
        "params.go",
        "unparsed_config.go",
        "validators.go",
    ],
    embedsrcs = [
        "bootstrappers.json",
        "checkpoints.json",
        "genesis_fuji.json",
        "genesis_local.json",
        "genesis_mainnet.json",
        "validators.json",
    ],
    importpath = "github.com/ava-labs/avalanchego/genesis",
    visibility = ["//visibility:public"],
    deps = [
        "//ids",
        "//utils",
        "//utils/cb58",
        "//utils/constants",
        "//utils/crypto/secp256k1",
        "//utils/formatting/address",
        "//utils/math",
        "//utils/sampler",
        "//utils/set",
        "//utils/units",
        "//utils/wrappers",
        "//vms/avm",
        "//vms/avm/fxs",
        "//vms/avm/txs",
        "//vms/components/gas",
        "//vms/nftfx",
        "//vms/platformvm/genesis",
        "//vms/platformvm/reward",
        "//vms/platformvm/signer",
        "//vms/platformvm/txs",
        "//vms/platformvm/validators/fee",
        "//vms/propertyfx",
        "//vms/secp256k1fx",
    ],
)

go_test(
    name = "genesis_test",
    srcs = [
        "bootstrappers_test.go",
        "config_test.go",
        "genesis_test.go",
    ],
    embed = [":genesis"],
    embedsrcs = [
        "genesis_test.json",
        "genesis_test_invalid_allocations.json",
    ],
    deps = [
        "//ids",
        "//upgrade",
        "//utils/constants",
        "//utils/hashing",
        "//utils/perms",
        "//vms/platformvm/genesis",
        "@com_github_ava_labs_libevm//core",
        "@com_github_stretchr_testify//require",
    ],
)
