[package]
name = "growth-ring"
version = "0.0.4"
edition = "2021"
keywords = ["wal", "db", "futures"]
license = "../LICENSE.md"
description = "Simple and modular write-ahead-logging implementation."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crc = "3.0.0"
lru = "0.12.0"
scan_fmt = "0.2.6"
regex = "1.6.0"
async-trait = "0.1.57"
futures = "0.3.24"
nix = {version = "0.27.1", features = ["fs", "uio"]}
libc = "0.2.133"
bytemuck = {version = "1.13.1", features = ["derive"]}
thiserror = "1.0.40"
tokio = { version = "1.28.1", features = ["fs", "io-util", "sync"] }

[dev-dependencies]
hex = "0.4.3"
rand = "0.8.5"
indexmap = "2.0.0"
tokio = { version = "1.28.1", features = ["tokio-macros", "rt", "macros"] }
test-case = "3.1.0"

[lib]
name = "growthring"
path = "src/lib.rs"
crate-type = ["dylib", "rlib", "staticlib"]

[lints.clippy]
unwrap_used = "warn"
indexing_slicing = "warn"
explicit_deref_methods = "warn"
missing_const_for_fn = "warn"
