[package]
name = "growth-ring"
version = "0.0.4"
edition = "2021"
keywords = ["wal", "db", "futures"]
license = "../LICENSE.md"
description = "Simple and modular write-ahead-logging implementation."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lru = "0.12.2"
scan_fmt = "0.2.6"
regex = "1.10.3"
async-trait = "0.1.77"
futures = "0.3.30"
nix = {version = "0.27.1", features = ["fs", "uio"]}
libc = "0.2.153"
bytemuck = {version = "1.14.2", features = ["derive"]}
thiserror = "1.0.56"
tokio = { version = "1.36.0", features = ["fs", "io-util", "sync"] }
crc32fast = "1.3.2"

[dev-dependencies]
hex = "0.4.3"
rand = "0.8.5"
indexmap = "2.2.2"
tokio = { version = "1.36.0", features = ["tokio-macros", "rt", "macros"] }
test-case = "3.3.1"

[lib]
name = "growthring"
path = "src/lib.rs"
crate-type = ["dylib", "rlib", "staticlib"]

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
unwrap_used = "warn"
indexing_slicing = "warn"
explicit_deref_methods = "warn"
missing_const_for_fn = "warn"
