[package]
name = "rpc"
version = "0.0.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "process-server"
test = false
bench = false

[[bin]]
name = "client"
test = false
bench = false

[dependencies]
firewood = { version = "0.0.4", path = "../firewood" }
prost = "0.12.3"
thiserror = "1.0.56"
tokio = { version = "1.36.0", features = ["sync", "rt-multi-thread"] }
tonic = { version = "0.10.2", features = ["tls"] }
tracing = { version = "0.1.40" }
clap = { version = "4.4.18", features = ["derive"] }
tempdir = "0.3.7"
log = "0.4.20"
env_logger = "0.11.1"
chrono = "0.4.33"
serde_json = "1.0.113"
serde = { version = "1.0.196", features = ["derive"] }

[build-dependencies]
tonic-build = "0.10.2"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
unwrap_used = "warn"
indexing_slicing = "warn"
explicit_deref_methods = "warn"
missing_const_for_fn = "warn"
