[package]
name = "rpc"
version = "0.0.4"
edition = "2024"
rust-version = "1.85.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "process-server"
test = false
bench = false

[[bin]]
name = "client"
test = false
bench = false

[dependencies]
firewood = { version = "0.0.7", path = "../firewood" }
prost = "0.13.1"
tokio = { version = "1.36.0", features = ["sync", "rt-multi-thread"] }
tonic = { version = "0.13.0", features = ["tls-ring"] }
tracing = { version = "0.1.40" }
clap = { version = "4.5.0", features = ["derive"] }
log = "0.4.20"
env_logger = "0.11.2"
chrono = "0.4.34"
serde_json = "1.0.113"
serde = { version = "1.0.196", features = ["derive"] }

[build-dependencies]
tonic-build = "0.13.0"

[dev-dependencies]
criterion = {version = "0.6.0", features = ["async_tokio"]}
rand = "0.9.1"
rand_distr = "0.5.0"

[[bench]]
name = "insert"
harness = false

[package.metadata.cargo-machete]
ignored = ["prost", "tonic-build"]
