load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "main_lib",
    srcs = ["main.go"],
    importpath = "github.com/ava-labs/avalanchego/main",
    visibility = ["//visibility:private"],
    deps = [
        "//app",
        "//config",
        "//version",
        "//vms/platformvm/block/executor",
        "@com_github_spf13_pflag//:pflag",
        "@org_golang_x_term//:term",
    ],
)

go_binary(
    name = "main",
    embed = [":main_lib"],
    visibility = ["//visibility:public"],
)
